--- a/estilo.css
+++ b/estilo.css
@@ -1,19 +1,19 @@
 body {
-    background-image: url(../s17Qi.jpg);
+   background-image: url(s17Qi.jpg);
     align-items: center;
     display: flex;
 }
 .retangle-box{
     display: flex;
     margin: auto;
-    background-color: rgb(17, 3, 143);
-    border-radius: 25px;
-    height: 400px;
-    width: 600px;
+    background-color: rgb(251, 251, 252);
+    
+    height: 300px;
+    width: 500px;
     
 }
 .retangulo-2{
-    background-color: beige;
+    background-color: rgb(5, 5, 5);
     margin-top: 105px;
     margin: auto;
     height: 200px;
@@ -23,6 +23,26 @@ body {
    
 }
 h1{
-    color: rgb(0, 0, 0);
+    color: rgb(250, 247, 247);
     margin: auto;
+}
+
+.retangle-box-2{
+    display: flex;
+    margin: auto;
+    background-color: rgb(17, 3, 143);
+    
+    height: 300px;
+    width: 500px;
+    
+}
+.retangulo-3{
+    background-color: rgb(2, 2, 2);
+    margin-top: 105px;
+    margin: auto;
+    height: 200px;
+    width: 400px;
+    border-radius: 25px;
+    display: flex;
+   
 }
