--- a/style.css
+++ b/style.css
@@ -1,22 +1,99 @@
-body {
+body{
+    margin: 0;
     font-family: Arial, sans-serif;
     margin: 0 auto;
     padding: 0;
     background-color: #c7c0ac;
 }
 
-header {
+nav{
+    color: aliceblue;
     background-color: #333;
-    color: white;
-    padding: 10px 0;
+    padding: 0 20px;
+    justify-content: space-between;
+    
 }
 
-nav {
-    list-style: none;
+nav , ul {
     display: flex;
-    justify-content: center;
-    justify-items: center;
+    flex-direction: row;
+    align-items: center;
+}
+
+ul{
+    list-style: none;
     padding: 0;
+}
+
+li {
+    color: wheat;
+    text-align: center;
+    font-size: 30px;
+    padding: 0 20px;
+}
+
+.botão-menu{
+    background-color: transparent;
+    border: none;
+    color: wheat;
+    font-size: 34px;
+    position: absolute;
+    right: 10px;
+    top: 23px;
+    display: none;
+}
+
+
+li:hover  {
+    cursor: pointer;
+    opacity: 0.8;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.botão-menu:focus ~ ul{
+ height: 200px;
+}
+
+
+@media (max-width: 525px){
+    nav, ul{
+        flex-direction: column;
+        align-items: unset;
+    }
+
+    li{
+        margin: 10px;
+    }
+
+    .logo{
+        width: 130px;
+    }
+
+    .h1-top{
+        font-size: 40px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+
+
+    ul{
+        text-align: center;
+        margin: o;
+        height: 0;
+        overflow: hidden;
+        transition: all 0.6s;
+    }
+
+    nav{
+        padding-top: 6px;
+    }
+    
+    .botão-menu{
+        margin-top: 0;
+        display: flex;
+        font-size: 60px;
+    }
+
+
 }
 
 button{
@@ -44,6 +121,7 @@ main {
 
 
 .slider {
+    margin-top: 0;
     width: 100%;
     overflow: hidden;
     position: relative;
